--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
             justify-content: center;
             padding: 80px 40px 30px 0;
             height: 100vh;
-            background: linear-gradient(to top, rgb(88, 0, 108), rgb(53, 0, 103));
+            background: radial-gradient( rgb(51, 0, 99), rgb(0, 4, 4));
             overflow: hidden;
         }
         
@@ -80,13 +80,28 @@
             font-family: Satisfy;
             padding-top: 50px;
             font-size: 70px;
-            color: white;
+            color: gold;
+        }
+        
+        .dp {
+            width: 15vw;
+            aspect-ratio: 1;
+            border-radius: 50%;
+            margin: 20px;
+            border-style: solid;
+            border-color: gold gold transparent transparent;
+            border-width: 0.5em 0.8em 0 0;
+            border-radius: 50%;
+            top: 0em;
+            left: 0em;
+            width: 20em;
+            height: 20em;
         }
         
         .intro {
-            color: aqua;
-            font-size: 20px;
-            bottom: 0;
+            color: gold;
+            font-size: 24px;
+            bottom: 10px;
         }
         
         .message {
@@ -103,48 +118,67 @@
             width: 80%;
             padding-top: 50px;
             justify-content: center;
+            align-items: center;
         }
         
         .column {
+            position: relative;
+            display: block;
             background-color: white;
             margin: 5px;
             width: 20em;
             height: 20em;
             border-radius: 50%;
             box-shadow: 0 0 1em rgb(56, 0, 103);
-            transition: 1s ease;
-            transform: scale(1.2);
-        }
-        
-        .move {
-            position: absolute;
-            border-style: solid;
-            border-color: rgb(77, 0, 141) yellow rgb(0, 239, 0) red;
-            border-width: 0.3em 0.5em 0.3em 0.5em;
-            border-radius: 50%;
-            top: 0em;
-            width: 20em;
-            height: 20em;
-            animation: orbit 5s linear infinite;
+            transition: 2s ease;
+            align-items: center;
+            overflow: hidden;
+            padding: 30px 20px 30px 20px;
         }
         
         .column:hover {
-            transition: 2s ease;
-            margin: 0 15em 0 15em;
+            transform: scale(1.5);
+            transition: 1s ease;
+            z-index: 1;
+            .move {
+                position: absolute;
+                border-style: solid;
+                border-color: goldenrod transparent transparent transparent;
+                border-width: 0.5em 0.8em 0 0;
+                border-radius: 50%;
+                top: 0em;
+                left: 0em;
+                width: 20em;
+                height: 20em;
+                animation: orbit 5s linear infinite;
+            }
+            .move::before {
+                content: "";
+                position: absolute;
+                border-style: solid;
+                background-color: goldenrod;
+                border-width: 0.5em 0 0 0;
+                border-radius: 50%;
+                top: 1.5em;
+                right: 2em;
+                width: 2em;
+                height: 2em;
+            }
         }
         
         .homelogo {
-            width: 12em;
-            height: 12em;
-            padding: 15px, 15px 0 15px;
-            border-radius: 50%;
+            display: block;
+            width: 130px;
+            height: 100px;
         }
         
         .tools {
+            display: block;
             margin: 5px 15px 5px 15px;
             font-size: 20px;
             font-weight: 600;
             color: blueviolet;
+            text-align: center;
         }
         
         @keyframes orbit {
@@ -156,10 +190,10 @@
         
         #graphic {
             width: 100%;
-            height: 100vh;
-            background-image: url(../images/gbackground.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
+            margin-top: 10vh;
+            height: 90vh;
+            justify-content: center;
+            align-items: center;
         }
         
         @media screen and (max-width:600px) {
@@ -200,6 +234,7 @@
             .column {
                 font-size: 8px;
                 padding: 10px 20px 10px 20px;
+                animation: showings 5s linear infinite;
             }
             .column:hover {
                 transition: 2s ease;
