--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,64 @@
             text-align: center;
             justify-content: center;
             padding: 80px 40px 30px 0;
-            height: 100vh;
+            height: auto;
             background: radial-gradient( rgb(51, 0, 99), rgb(0, 4, 4));
             overflow: hidden;
+        }
+        
+        .square {
+            position: relative;
+            box-shadow: 0 0 1em aqua;
+            border-bottom-right-radius: 50px;
+            border-top-left-radius: 50px;
+            padding: 20px;
+            margin-bottom: 10px;
+            margin: 0 10% 10px 10%;
+        }
+        
+        .moves::before {
+            content: "";
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: gold;
+            border-radius: 50%;
+            top: -5px;
+            animation: bords 10s linear infinite;
+        }
+        
+        .moves {
+            position: absolute;
+            background-color: gold;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            top: -10px;
+            animation: bord 9s linear infinite;
+        }
+        
+        @keyframes bord {
+            0% {
+                transform: translateX(0);
+            }
+            50% {
+                transform: translateX(74vw);
+                filter: hue-rotate(360deg);
+            }
+        }
+        
+        @keyframes bords {
+            0% {
+                transform: translateX(0);
+            }
+            50% {
+                transform: translateX(5vw);
+                filter: hue-rotate(360deg);
+            }
+            100% {
+                transform: translateX(-5vw);
+                filter: hue-rotate(360deg);
+            }
         }
         
         .welcome {
@@ -108,7 +163,7 @@
             text-align: justify;
             text-align-last: center;
             color: white;
-            padding: 5px 20% 5px 20%;
+            padding: 5px 5% 5px 5%;
         }
         
         .bgwhite {
@@ -213,10 +268,22 @@
                 background-color: white;
             }
             #home {
-                width: 100%;
-                padding-left: 50px;
-                padding-right: 50px;
+                width: 100vw;
+                font-size: 10px;
                 height: auto;
+                padding-left: 20px;
+                padding-top: 0px;
+                bottom: 0;
+            }
+            #home p {
+                transform: scale(0.8);
+            }
+            .square {
+                width: 100vw;
+                margin: 0;
+                transform: scale(0.9);
+                margin-left: -20px;
+                padding: 0;
             }
             body {
                 background-color: transparent;
