--- a/css/style.css
+++ b/css/style.css
@@ -1,319 +1,524 @@
-        @font-face {
-            font-family: 'Satisfy';
-            src: url(Satisfy-Regular.ttf) format('truetype');
-        }
-        
-        @font-face {
-            font-family: 'Quicksand';
-            src: url(Quicksand-Regular.ttf) format('truetype');
-        }
-        
-        body {
-            font-family: Quicksand;
-            margin: 0;
-            align-items: center;
-            justify-content: center;
-            background-color: aliceblue;
-        }
-        
-        .navbar {
-            position: fixed;
-            width: 100%;
-            background-color: white;
-            z-index: 1000;
-        }
-        
-        .navbar-nav {
-            text-align: center;
-            justify-content: center;
-            width: 100%;
-            margin: 0;
-            position: relative;
-        }
-        
-        .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2833, 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-        }
-        
-        .nav-item {
-            padding: 0 20px 0 20px;
-        }
-        
-        .nav-link {
-            font-family: Quicksand;
-            text-decoration: none;
-            color: rgb(53, 0, 103);
-            transition: 0.5s;
-            text-align: left;
-            width: fit-content;
-            padding: 10px 20px 10px 20px !important;
-            margin: 5px;
-            font-weight: 600;
-            border-bottom-left-radius: 15px;
-            border-bottom-right-radius: 15px;
-        }
-        
-        .nav-link:hover {
-            background-color: rgb(53, 0, 103);
-            transition: 0.5s;
-            font-weight: 500;
-            color: white;
-        }
-        
-        a:active {
-            text-decoration-line: overline;
-            text-decoration-color: white;
-            text-decoration-thickness: 2px;
-            text-decoration-skip-ink: auto;
-        }
-        
-        #home {
-            text-align: center;
-            justify-content: center;
-            padding: 80px 40px 30px 0;
-            height: auto;
-            background: radial-gradient( rgb(51, 0, 99), rgb(0, 4, 4));
-            overflow: hidden;
-        }
-        
-        .square {
-            position: relative;
-            box-shadow: 0 0 1em aqua;
-            border-bottom-right-radius: 50px;
-            border-top-left-radius: 50px;
-            padding: 20px;
-            margin-bottom: 10px;
-            margin: 0 10% 10px 10%;
-        }
-        
-        .moves::before {
-            content: "";
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background-color: gold;
-            border-radius: 50%;
-            top: -5px;
-            animation: bords 10s linear infinite;
-        }
-        
-        .moves {
-            position: absolute;
-            background-color: gold;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            top: -10px;
-            animation: bord 9s linear infinite;
-        }
-        
-        @keyframes bord {
-            0% {
-                transform: translateX(0);
-            }
-            50% {
-                transform: translateX(74vw);
-                filter: hue-rotate(360deg);
-            }
-        }
-        
-        @keyframes bords {
-            0% {
-                transform: translateX(0);
-            }
-            50% {
-                transform: translateX(5vw);
-                filter: hue-rotate(360deg);
-            }
-            100% {
-                transform: translateX(-5vw);
-                filter: hue-rotate(360deg);
-            }
-        }
-        
-        .welcome {
-            font-family: Satisfy;
-            padding-top: 50px;
-            font-size: 70px;
-            color: gold;
-        }
-        
-        .dp {
-            width: 15vw;
-            aspect-ratio: 1;
-            border-radius: 50%;
-            margin: 20px;
-            border-style: solid;
-            border-color: gold gold transparent transparent;
-            border-width: 0.5em 0.8em 0 0;
-            border-radius: 50%;
-            top: 0em;
-            left: 0em;
-            width: 20em;
-            height: 20em;
-        }
-        
-        .intro {
-            color: gold;
-            font-size: 24px;
-            bottom: 10px;
-        }
-        
-        .message {
-            text-align: justify;
-            text-align-last: center;
-            color: white;
-            padding: 5px 5% 5px 5%;
-        }
-        
-        .bgwhite {
-            margin: 0 10% 0 10%;
-            font-size: 10px;
-            display: flex;
-            width: 80%;
-            padding-top: 50px;
-            justify-content: center;
-            align-items: center;
-        }
-        
-        .column {
-            position: relative;
-            display: block;
-            background-color: white;
-            margin: 5px;
-            width: 20em;
-            height: 20em;
-            border-radius: 50%;
-            box-shadow: 0 0 1em rgb(56, 0, 103);
-            transition: 2s ease;
-            align-items: center;
-            overflow: hidden;
-            padding: 30px 20px 30px 20px;
-        }
-        
-        .column:hover {
-            transform: scale(1.5);
-            transition: 1s ease;
-            z-index: 1;
-            .move {
-                position: absolute;
-                border-style: solid;
-                border-color: goldenrod transparent transparent transparent;
-                border-width: 0.5em 0.8em 0 0;
-                border-radius: 50%;
-                top: 0em;
-                left: 0em;
-                width: 20em;
-                height: 20em;
-                animation: orbit 5s linear infinite;
-            }
-            .move::before {
-                content: "";
-                position: absolute;
-                border-style: solid;
-                background-color: goldenrod;
-                border-width: 0.5em 0 0 0;
-                border-radius: 50%;
-                top: 1.5em;
-                right: 2em;
-                width: 2em;
-                height: 2em;
-            }
-        }
-        
-        .homelogo {
-            display: block;
-            width: 130px;
-            height: 100px;
-        }
-        
-        .tools {
-            display: block;
-            margin: 5px 15px 5px 15px;
-            font-size: 20px;
-            font-weight: 600;
-            color: blueviolet;
-            text-align: center;
-        }
-        
-        @keyframes orbit {
-            to {
-                transform: rotate(360deg);
-                filter: hue-rotate(360deg);
-            }
-        }
-        
-        #graphic {
-            width: 100%;
-            margin-top: 10vh;
-            height: 90vh;
-            justify-content: center;
-            align-items: center;
-        }
-        
-        @media screen and (max-width:600px) {
-            .navbar {
-                width: auto;
-                text-align: left;
-                background-color: transparent;
-            }
-            .nav-item {
-                background-color: white;
-                border-bottom-right-radius: 6cqmax;
-                padding: 0 0 0 0;
-                text-align: left;
-            }
-            .navbar-toggler {
-                margin-bottom: 10px;
-                background-color: white;
-            }
-            #home {
-                width: 100vw;
-                font-size: 10px;
-                height: auto;
-                padding-left: 20px;
-                padding-top: 0px;
-                bottom: 0;
-            }
-            #home p {
-                transform: scale(0.8);
-            }
-            .square {
-                width: 100vw;
-                margin: 0;
-                transform: scale(0.9);
-                margin-left: -20px;
-                padding: 0;
-            }
-            body {
-                background-color: transparent;
-            }
-            .message {
-                padding-left: 2%;
-                padding-right: 2%;
-            }
-            .bgwhite {
-                display: block;
-                justify-content: center;
-                font-size: 10px;
-                width: 100%;
-            }
-            .column {
-                font-size: 8px;
-                padding: 10px 20px 10px 20px;
-                animation: showings 5s linear infinite;
-            }
-            .column:hover {
-                transition: 2s ease;
-                margin: 5em 0 5em 0;
-            }
-            .move {
-                left: 0em;
-            }
-            .tools {
-                font-size: 12px;
-            }
-            #graphic {
-                background-image: url(../images/gmobile.jpg);
-            }
-        }
+@font-face {
+  font-family: "Satisfy";
+  src: url(font/) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand";
+  src: url(font/) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(font/) format("truetype");
+}
+
+body {
+  font-family: Quicksand;
+  margin: 0;
+  background-color: aliceblue;
+  display: block;
+}
+
+.background {
+  background-image: url("../images/isto.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+}
+
+#home {
+  background-color: white;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.home {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  flex-direction: row;
+  padding: 100px 0 0 0;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.95)
+  );
+  transition: 5s;
+}
+
+.home:hover {
+  .moves {
+    transition: 5s ease;
+    transform: translate(3em, 15em);
+  }
+}
+
+.navi {
+  margin-right: 7em;
+  margin-left: 3em;
+}
+
+.navbar {
+  position: fixed;
+  z-index: 1000;
+  transition: background-color 0.3s ease;
+  background-color: transparent;
+}
+
+.navbar-toggler {
+  display: block;
+  background-color: #ff1d58;
+  border-radius: 0 !important;
+  border: none !important;
+  box-shadow: none !important;
+  padding: 20px 10px 20px 10px;
+  margin-bottom: 20px;
+  width: 60px;
+  font-size: 25px;
+}
+
+.toggle {
+  color: white !important;
+}
+
+.nav-item {
+  border: 0.5px white solid;
+  border-left: 0;
+  border-right: 0;
+  background-color: #ff1d58;
+  width: 60px;
+  height: auto;
+}
+
+.nav-link {
+  font-family: Quicksand;
+  text-decoration: none;
+  transition: 0.5s;
+  text-align: center;
+  font-weight: 600;
+  font-size: 25px;
+  color: white !important;
+  padding: 20px 0 20px 0;
+}
+
+.nav-item:hover,
+.navbar-toggler:hover {
+  transition: 0.5s;
+  font-weight: 500;
+  background-color: white;
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.6) !important;
+  .nav-link {
+    color: #ff1d58 !important;
+  }
+  .toggle {
+    color: #ff1d58 !important;
+  }
+}
+
+.nav-link.active {
+  background-color: white;
+  color: #ff1d58 !important;
+}
+
+.photo {
+  margin-top: 0.6em;
+  margin-right: 4em;
+  z-index: 999;
+}
+
+.dp {
+  width: 80%;
+  height: auto;
+  border: 0.6em solid rgb(255, 255, 255);
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.6);
+  border-bottom-right-radius: 50px;
+  border-top-left-radius: 50px;
+}
+
+.description {
+  transition: 5s all;
+  margin-top: 13em;
+  flex-grow: 1;
+  z-index: 888;
+}
+
+.name {
+  transition: 5s all;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: bolder;
+  font-size: 50px;
+  color: #ff1d58;
+  z-index: 888;
+}
+
+.intro {
+  transition: 5s all;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(255, 255, 255);
+  font-size: 22px;
+  font-weight: 500;
+  z-index: 888;
+}
+
+.mess {
+  transition: 5s all;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(180, 180, 180);
+  z-index: 888;
+}
+
+.detail {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  padding: 30px;
+  width: 100%;
+  justify-content: center;
+  font-size: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  bottom: 0;
+  background-color: white;
+  box-shadow: 0 0 1em rgba(118, 118, 118, 0.4);
+  z-index: 888;
+}
+
+.info {
+  margin: 10px 20px;
+  color: #ff1d58;
+  border: none;
+  background-color: transparent;
+  text-decoration: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 10px 30px;
+  box-shadow: 0 0 1em rgba(118, 118, 118, 0.4);
+  border-radius: 30px;
+}
+
+.info:hover {
+  background-color: #ff1d58;
+  color: white;
+}
+
+.message {
+  position: absolute;
+  color: white;
+  padding: 5px 5% 5px 5%;
+}
+
+.moves {
+  position: absolute;
+  background-color: rgb(255, 255, 138);
+  width: 5em;
+  height: 5em;
+  border-radius: 50%;
+  right: 15em;
+  transition: 5s ease;
+}
+
+.oscilate {
+  position: absolute;
+  border-style: solid;
+  border-color: white white transparent transparent;
+  border-width: 0.1em 0.2em 0.05em 0;
+  border-radius: 50%;
+  top: -2.6em;
+  left: -2.5em;
+  width: 10em;
+  height: 10em;
+  animation: orbit 36s linear infinite;
+}
+
+.oscilate::before {
+  content: "";
+  position: absolute;
+  background-color: white;
+  border-radius: 50%;
+  width: 0.8em;
+  height: 0.8em;
+  top: 9em;
+  left: 7em;
+}
+
+.oscilate2 {
+  position: absolute;
+  border-style: solid;
+  border-color: #ff1d58 #ff1d58 transparent transparent;
+  border-width: 0.1em 0.2em 0.05em 0;
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+  top: 8em;
+  left: 6em;
+  animation: orbit 36s linear infinite;
+}
+
+.oscilate2::before {
+  content: "";
+  position: absolute;
+  background-color: #ff1d58;
+  border-radius: 50%;
+  width: 0.5em;
+  height: 0.5em;
+  top: 2.4em;
+  left: 2em;
+}
+
+.about-container {
+  position: relative;
+  display: flex;
+  padding: 2em 4em 2em 10em;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  flex-wrap: wrap;
+  background-color: white;
+  margin-top: -16px;
+}
+
+.about-container span {
+  color: #ff1d58;
+  font-size: 20px;
+  padding: 10px 10px;
+}
+
+.about-container h3,
+h1 {
+  color: gray;
+  width: 100%;
+}
+
+.about,
+.personal-details {
+  width: 50%;
+  padding: 1em 2em;
+  text-align: justify;
+}
+
+.personal-details p {
+  display: inline;
+  font-size: 15px;
+}
+
+.about-more {
+  width: 100%;
+  padding: 1em 2em;
+  display: block;
+}
+
+.about-more a {
+  background-color: #ff1d58;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 15px;
+  text-decoration: none;
+  font-size: 13px;
+}
+
+.about-more p {
+  margin-top: 15px;
+  text-align: justify;
+}
+
+/* END OF HOME */
+
+#graphic {
+  position: relative;
+  display: flex;
+  top: 0;
+  left: 0;
+}
+
+.bgwhite {
+  margin: 0 10% 0 10%;
+  font-size: 10px;
+  display: flex;
+  width: 80%;
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.ghead {
+  justify-content: center;
+  text-align: center;
+  color: #ff1d58;
+  animation: bords 5s linear infinite;
+  padding: 50px;
+}
+
+.column {
+  display: block;
+  background-color: white;
+  margin: 5px;
+  width: 20em;
+  height: 20em;
+  border-radius: 50%;
+  box-shadow: 0 0 1em #ff1d58;
+  transition: 2s ease;
+  align-items: center;
+  overflow: hidden;
+  padding: 30px 20px 30px 20px;
+}
+
+.column:hover {
+  transform: scale(1.5);
+  transition: 1s ease;
+  z-index: 1;
+  .move {
+    position: absolute;
+    border-style: solid;
+    border-color: #ff1d58 transparent transparent transparent;
+    border-width: 0.5em 0.8em 0 0;
+    border-radius: 50%;
+    top: 0em;
+    left: 0em;
+    width: 20em;
+    height: 20em;
+    animation: orbit 5s linear infinite;
+  }
+  .move::before {
+    content: "";
+    position: absolute;
+    border-style: solid;
+    background-color: #ff1d58;
+    border-width: 0.5em 0 0 0;
+    border-radius: 50%;
+    top: 1.5em;
+    right: 2em;
+    width: 2em;
+    height: 2em;
+  }
+}
+
+.homelogo {
+  display: block;
+  width: 130px;
+  height: 100px;
+}
+
+.tools {
+  display: block;
+  margin: 5px 15px 5px 15px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #ff1d58;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    left: 0;
+  }
+  .background {
+    width: 100%;
+    height: auto;
+  }
+  #home {
+    height: auto;
+  }
+  .home {
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+  }
+  .photo,
+  .description,
+  .detail {
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
+    padding-top: 0;
+  }
+  .dp {
+    width: 70vw;
+    margin: 0;
+  }
+  .name {
+    font-size: 27px;
+    color: #ff1d58;
+  }
+  .intro {
+    font-size: 17px;
+    margin-top: -1em;
+  }
+  .mess {
+    font-size: 15px;
+    padding: 0 80px 0 80px;
+  }
+  .info {
+    display: block;
+    text-align: left;
+    margin: 15px 10px 15px 10px;
+  }
+  .detail {
+    height: auto;
+  }
+  .about-container {
+    position: relative;
+    display: block;
+    width: 100vw;
+    padding: 30px;
+  }
+  .about,
+  .personal-details {
+    width: 100%;
+    padding: 10px;
+    text-align: justify;
+    font-size: 13px;
+  }
+  .personal-details span {
+    margin-top: -9px;
+  }
+  .personal-details p {
+    display: flex;
+    font-size: 13px;
+    padding: 0;
+    margin: 0;
+  }
+  .about-more {
+    width: 100%;
+    padding: 10px;
+    display: block;
+  }
+  .about-more a {
+    position: relative;
+    left: 50px;
+  }
+  .about-more p {
+    font-size: 13px;
+  }
+  /* /*     END OF HOME * */
+  .bgwhite {
+    flex-direction: column;
+  }
+  .column {
+    flex-direction: column;
+  }
+}
+
+/* ANIMATIONS */
+
+@keyframes bords {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10vw);
+    filter: hue-rotate(360deg);
+  }
+  100% {
+    transform: translateX(0vw);
+    filter: hue-rotate(360deg);
+  }
+}
+
+@keyframes orbit {
+  to {
+    transform: rotate(360deg);
+  }
+}
