--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  flex: 1;
+  flex-grow: 1;
   font-weight: 600;
 }
 
@@ -457,7 +457,6 @@ h1 {
 
 .respon {
   text-align: justify;
-  margin: 1em;
 }
 
 /* END OF EXPERIENCE */
@@ -601,6 +600,79 @@ h1 {
 }
 
 /* END OF SKILL */
+
+.portfolio {
+  background-color: black;
+  color: white;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolio h1 {
+  margin: 3em 0 0 5em;
+}
+
+.portbox {
+  width: 90%;
+  right: 0;
+  display: flex;
+  align-self: flex-end;
+  padding: 2em;
+  flex-wrap: wrap;
+}
+
+.portbox a {
+  text-decoration: none;
+  border-radius: 20px;
+  padding: 0.7em 2em;
+  color: white;
+  background-color: #ff1d58;
+  margin: 0 1em;
+  transition: 1s ease;
+}
+
+.portbox a:hover {
+  color: white;
+  background-color: black;
+  border: 2px white solid;
+  transition: 1s ease;
+}
+
+.navig {
+  margin-bottom: 2em;
+}
+
+.slider-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  overflow: hidden;
+  width: 100%;
+  max-width: auto;
+  margin: auto;
+}
+
+.slider-container img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  opacity: 0.4;
+  transition: opacity 0.5s ease;
+}
+
+.slider-container img.active {
+  opacity: 1;
+}
+
+.nav-btn {
+  cursor: pointer;
+  font-size: 24px;
+  padding: 10px;
+  user-select: none;
+}
 
 #graphic {
   position: relative;
