--- a/css/mobile.css
+++ b/css/mobile.css
@@ -240,4 +240,63 @@
   .column {
     flex-direction: column;
   }
+  .portfolio h1 {
+    margin: 2em 0 1em 0;
+  }
+  .navig {
+    display: flex;
+    flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+  }
+  .portbox {
+    position: relative;
+    overflow: none;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  #portfolio:hover .image {
+    filter: blur(0.5px);
+  }
+  .image {
+    pointer-events: none;
+  }
+  .portbox a {
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 0.7em 1.5em;
+    color: white;
+    background-color: #ff1d58;
+    margin: 0.2em;
+    transition: 1s ease;
+    font-size: 12px;
+  }
+  .section.active {
+    display: block;
+    flex-wrap: wrap;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #portfolio .image {
+    position: relative;
+    width: 30%;
+    aspect-ratio: 1;
+    border-radius: 23%;
+    margin: 20px;
+    transition: 0.5s ease;
+  }
+  .section:hover .image {
+    filter: none;
+  }
+  #portfolio .image:hover {
+    filter: none;
+    width: 70%;
+    z-index: 2;
+    transition: all 1s;
+    border-radius: 15%;
+  }
 }
