--- a/css/style.css
+++ b/css/style.css
@@ -651,7 +651,7 @@ h1 {
   position: relative;
   width: 20%;
   height: auto;
-  border-radius: 23%;
+  border-radius: 10px;
   margin: 20px;
   transition: 0.5s ease;
 }
@@ -676,7 +676,7 @@ h1 {
   z-index: 2;
   transition: all 1s;
   margin: 5em 3em;
-  border-radius: 15%;
+  border-radius: 5px;
   gap: 3;
 }
 
